assets/css/app.css
*, body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
  font-family: "Ubuntu", "Helvetica Neue", "Helvetica", "Arial", "WenQuanYi Micro Hei", "Microsoft YaHei", "Droid Sans Fallback", sans-serif;
}
::-webkit-scrollbar {
  width: 0px;
  height: 0px;
}
body {
  font-size: 13px;
  -webkit-font-smoothing: antialiased;
  line-height: 1.42857143;
  overflow: hidden;
  -webkit-user-select: none;
  -webkit-user-drag: none;
}
.alert {
  border-radius: 0px;
  font-size: 12px;
  margin-bottom: 1px;
  padding: 3px;
  text-align: center;
  text-overflow: ellipsis;
  white-space: nowrap;
}
.alert-container {
  z-index: 2;
  position: relative;
  overflow: hidden;
}
.alert-history {
  z-index: 1;
  position: relative;
  margin-bottom: 0;
  padding-bottom: 0;
  transition: 0.3s;
  overflow: hidden;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}
.alert-history-contents {
  overflow: scroll;
  text-overflow: initial;
}
.alert-history-hidden {
  bottom: -10px !important;
}
.tab-content {
  overflow: auto;
  margin-bottom: 15px;
}
#poi-app-container {
  overflow: hidden;
}
kan-game poi-info .alert {
  opacity: 0.7;
  padding: 6px 3px 5px 3px;
  margin-bottom: 0px;
  height: 100%;
}
kan-game poi-map-reminder {
  position: relative;
  width: 135px;
}
kan-game poi-map-reminder .progress {
  position: absolute;
  width: 100%;
  height: 3px;
  border-radius: 0;
  background-color: transparent;
}
span, img, .panel-heading, .table tbody tr td {
  -webkit-user-select: none !important;
  cursor: default;
}
input + span {
  cursor: inherit;
}
button > span {
  cursor: inherit;
}
a, button {
  cursor: pointer;
}
hr {
  margin-top: 5px;
  margin-bottom: 5px;
}
poi-app {
  position: static;
}
poi-app .container {
  padding-left: 0px;
  padding-right: 0px;
  width: auto;
  overflow-x: hidden;
}
table {
  table-layout: fixed;
}
poi-app poi-nav-tabs .nav {
  display: flex;
}
#top-nav {
  display: inherit;
}
#top-nav > li {
  width:26%;
}
#top-nav > li.dropdown, #top-nav > li.tab-narrow{
  width:11%;
}
poi-app poi-nav-tabs .nav li {
  flex: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}
poi-app poi-nav-tabs .nav  li a {
  text-align: center;
}
poi-app poi-nav-tabs .nav .dropdown-menu {
  min-width: 100%;
}
poi-app poi-nav-tabs .nav .dropdown {
  overflow: inherit;
}
poi-info {
  display: flex;
  align-items: stretch;
}
poi-alert {
  flex: 1;
}
poi-control {
  height: 100%;
}
poi-control .btn-sm {
  border-radius: 0px;
  border-width: 2px;
  padding: 2px 7px;
  font-size: 15px;
}
poi-control button .fa {
  cursor: pointer !important;
  width: 20px;
}
poi-control .poi-control-container {
  display: flex;
  flex-direction: row;
}
poi-control .poi-control-extender {
  white-space: nowrap;
  overflow: hidden;
  transition: 0.3s;
  display: block;
}
poi-control .collapse {
  width: 0px;
}
poi-control .collapse.in {
  width: auto;
}
poi-control .collapsing {
  width: auto;
}
.table tbody tr td {
  padding: 8px;
}
.btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn.active.focus {
  outline: none !important;
}
.poi-tabs-container {
  display: flex;
}
.poi-tabs-container > div {
  flex: 1;
}
.poi-tab-contents {
  display: -webkit-box;
  position: relative;
}
.poi-tab-child-sizer {
  left: 0;
  top: 0;
  width: 100%;
  margin-right: -100%;
  padding: 0;
  overflow: hidden;
}
.poi-tab-child-positioner {
  position: relative;
  width: 100%;
  transition: .35s ease-in-out;
  opacity: 1;
}
.poi-app-tabpane {
  width: 100%;
}
.poi-plugin {
  left: 100%;
}
.hidden-left {
  visibility: hidden;
  left: 100%;
}
.hidden-right {
  visibility: hidden;
  right: 100%;
}
.div-col {
  display: flex;
  flex-flow: column;
}
.poi-ship-cond-0.dark {  /* cond 0~19  */
  color: #DD514C;
  font-weight: bold;
}
.poi-ship-cond-20.dark { /* cond 20~29 */
  color: #F37B1D;
}
.poi-ship-cond-30.dark { /* cond 30~39 */
  color: #FFC880;
}
.poi-ship-cond-40.dark { /* cond 40~48 */

}
.poi-ship-cond-49.dark { /* cond 49 */

}
.poi-ship-cond-50.dark { /* cond 50~52 */
  color: #FFEE00
}
.poi-ship-cond-53.dark { /* cond 53~100 */
  color: #FFFF40;
  font-weight: bold;
}

.poi-ship-cond-0.light {  /* cond 0~19  */
  text-shadow: 0 0 3px #DD514C;
  font-weight: bold;
}
.poi-ship-cond-20.light { /* cond 20~29 */
  text-shadow: 0 0 3px #F37B1D;
}
.poi-ship-cond-30.light { /* cond 30~39 */
  text-shadow: 0 0 3px #FFC880;
}
.poi-ship-cond-40.light { /* cond 40~48 */

}
.poi-ship-cond-49.light { /* cond 49 */

}
.poi-ship-cond-50.light { /* cond 50~52 */
  text-shadow: 0 0 3px #FFEE00;
}
.poi-ship-cond-53.light { /* cond 53~100 */
  text-shadow: 0 0 3px #FFFF00;
  font-weight: bold;
}
.alert-position {
  margin-left: auto;
  margin-right: auto;
}
.overflow-anim {
  animation-name: overflowscroll;
  animation-duration: 18s;
  animation-delay: 2s;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
  margin-left: 0%;
}
@keyframes overflowscroll {
    0% {margin-left: 0%;}
    100% {margin-left: -100%;}
}
a:focus {
  outline: none;
}
.undecided-checkbox-inside label {
    cursor: help;
}
.undecided-checkbox-inside label input[type="checkbox"] {
    cursor: help;
}
.undecided-checkbox-inside input[type="checkbox"]:not(:checked):after {
    content: "?";
    text-align: center;
}
input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer-spin-button {
  -webkit-appearance: none;
}
.no-scroll {
  overflow: hidden;
}
.correct-container {
  padding-left: 15px !important;
  padding-right: 15px !important;
}
.no-transition {
  transition: 0s;
}
.transparent {
  opacity: 0;
}

